# streamlit-vscode-template

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini
.devcontainer/: devcontainer.json  docker-compose.yml
docs/: memo.md
src/: main.py
tests/: test_calc.py
