[tool.poetry]
name = "streamlit-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.76.0"
watchdog = "^2.0.0"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
pytest = "^6.2.2"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
