[tool.poetry]
name = "streamlit-vscode-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.76.0"
watchdog = "^2.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
flake8 = "^3.8.4"
autopep8 = "^1.5.5"
pytest = "^6.2.2"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# see https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "-ra -q"
# see https://docs.pytest.org/en/stable/warnings.html#deprecationwarning-and-pendingdeprecationwarning
filterwarnings = [
    'ignore:.*np.* is a deprecated alias:DeprecationWarning',
]
testpaths = "."
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test_"
